--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Exercise from TOP curriculum",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/VeejayPL/restaurant-page.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "VeejayPL",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/VeejayPL/restaurant-page/issues"
