--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
+    "serve": "webpack serve",
     "build": "webpack"
   },
   "repository": {
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/VeejayPL/restaurant-page#readme",
   "devDependencies": {
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
